# src/routes/dashboard.routes.ts
@@ -4,6 +4,6 @@ import * as dashboardController from '../controllers/dashboard.controller.js';
 export const dashboardRoutes = Router();
 
 dashboardRoutes.post(
-    '/dashboards/organizations/:orgName/elements/:elementName/agreementCollections/:agColName/agreementVersions/auditableVersion',
-    dashboardController.createAuditableAgreementVersionDashboard,
+    '/dashboards/organizations/:orgName/scopes/:scopeId/agreementCollections/:agColId/agreementVersions/:agreementVersion',
+    dashboardController.createAgreementVersionDashboard,
 );
