# src/routes/influx.routes.ts
@@ -4,6 +4,6 @@ import * as influxController from '../controllers/influx.controller.js';
 export const influxRoutes = Router();
 
 influxRoutes.post(
-    '/influx/organizations/:orgName/elements/:elementName/agreementCollections/:agColName/agreementVersions/auditableVersion/states/sync',
-    influxController.syncAuditableAgreementVersionStates,
+    '/influx/organizations/:orgName/scopes/:scopeId/agreementCollections/:agColId/agreementVersions/:agreementVersion/states/sync',
+    influxController.syncAgreementVersionStates,
 );
